--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.main.sources=com.github.sdavids13.camel.SpringBootAwsCamelApplication
 camel.springboot.xmlRoutes=false
 camel.springboot.allow-use-original-message=false
 
-#my.jmsToSns.foo=bar
-my.sqs-to-jms.spring-boot-aws=foo
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+
+aws.bridge.jmsToSns.amq-queue=spring-boot-camel
+aws.bridge.sqs-to-jms.spring-boot-camel-entrypoint=amq-queue
+aws.bridge.jms-to-sqs.amq-queue=spring-boot-camel-endpoint
