Adding configurable properties for the sqs publisher.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.activemq.password=admin
 aws.bridge.jmsToSns.amq-queue=spring-boot-camel
 aws.bridge.sqs-to-jms.spring-boot-camel-entrypoint=amq-queue
 aws.bridge.jms-to-sqs.amq-queue=spring-boot-camel-endpoint
+
+aws.sqs.publish.maxMessagesPerPoll=10
+aws.sqs.publish.concurrentConsumers=2
+aws.sqs.publish.defaultVisibilityTimeout=60
